// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Homepage should match previous snapshot for anonymous user homepage 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <StaticRouter>
    <Router
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "createHref": [Function],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "listen": [Function],
          "location": Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
          "push": [Function],
          "replace": [Function],
        }
      }
      staticContext={Object {}}
    >
      <Homepage>
        <styled.div>
          <div
            className="sc-bdfBwQ dKXXvR"
          >
            <HomepageAnon
              t={[Function]}
            >
              <styled.div
                alignItems="center"
                display="grid"
                gridGap="3em"
                gridTemplateColumns="minmax(700px, 1fr) 1fr"
                marginX="auto"
                maxWidth="1450px"
              >
                <div
                  className="sc-bdfBwQ OSpKK"
                  display="grid"
                >
                  <styled.div>
                    <div
                      className="sc-bdfBwQ dKXXvR"
                    >
                      <Canon
                        lineHeight="initial"
                        tag="h1"
                      >
                        <DynamicTextComponent
                          fontFamily="IBM Plex Sans, Helvetica Neue, Arial, sans-serif"
                          fontSize="3rem"
                          fontWeight={300}
                          letterSpacing={0}
                          lineHeight="initial"
                          tag="h1"
                        >
                          <styled.p
                            as="h1"
                            fontFamily="IBM Plex Sans, Helvetica Neue, Arial, sans-serif"
                            fontSize="3rem"
                            fontWeight={300}
                            letterSpacing={0}
                            lineHeight="initial"
                          >
                            <h1
                              className="sc-gKsewC fCGWbv"
                              fontFamily="IBM Plex Sans, Helvetica Neue, Arial, sans-serif"
                              fontSize="3rem"
                              fontWeight={300}
                              letterSpacing={0}
                            >
                              home.pages.anon.hero
                            </h1>
                          </styled.p>
                        </DynamicTextComponent>
                      </Canon>
                      <BodyCopy
                        lineHeight="initial"
                      >
                        <DynamicTextComponent
                          fontFamily="IBM Plex Sans, Helvetica Neue, Arial, sans-serif"
                          fontSize="1rem"
                          fontWeight={400}
                          letterSpacing={0}
                          lineHeight="initial"
                          tag="p"
                        >
                          <styled.p
                            as="p"
                            fontFamily="IBM Plex Sans, Helvetica Neue, Arial, sans-serif"
                            fontSize="1rem"
                            fontWeight={400}
                            letterSpacing={0}
                            lineHeight="initial"
                          >
                            <p
                              className="sc-gKsewC blXFYu"
                              fontFamily="IBM Plex Sans, Helvetica Neue, Arial, sans-serif"
                              fontSize="1rem"
                              fontWeight={400}
                              letterSpacing={0}
                            >
                              home.pages.anon.subtitle
                            </p>
                          </styled.p>
                        </DynamicTextComponent>
                      </BodyCopy>
                      <PrimaryButton>
                        <DynamicButtonComponent
                          bg={
                            Object {
                              "darker1": "#1D1611",
                              "darker2": "#16110D",
                              "default": "#241C15",
                              "lighter1": "#504944",
                              "lighter2": "#7C7773",
                            }
                          }
                          border={0}
                          borderRadius={4}
                          color={
                            Object {
                              "darker1": "#FFFFFF",
                              "darker2": "#FFFFFF",
                              "default": "#FFFFFF",
                              "lighter1": "#FFFFFF",
                              "lighter2": "#FFFFFF",
                            }
                          }
                          disabled={false}
                          isIconOnly={false}
                          onClick={[Function]}
                          padding="8px 16px"
                          textDecoration="none"
                        >
                          <styled.button
                            bg={
                              Object {
                                "darker1": "#1D1611",
                                "darker2": "#16110D",
                                "default": "#241C15",
                                "lighter1": "#504944",
                                "lighter2": "#7C7773",
                              }
                            }
                            border={0}
                            borderRadius={4}
                            color={
                              Object {
                                "darker1": "#FFFFFF",
                                "darker2": "#FFFFFF",
                                "default": "#FFFFFF",
                                "lighter1": "#FFFFFF",
                                "lighter2": "#FFFFFF",
                              }
                            }
                            onClick={[Function]}
                            padding="8px 16px"
                            textDecoration="none"
                          >
                            <button
                              className="sc-iBPRYJ lmqocc"
                              color={
                                Object {
                                  "darker1": "#FFFFFF",
                                  "darker2": "#FFFFFF",
                                  "default": "#FFFFFF",
                                  "lighter1": "#FFFFFF",
                                  "lighter2": "#FFFFFF",
                                }
                              }
                              onClick={[Function]}
                              textDecoration="none"
                            >
                              <Brevier
                                fontWeight={600}
                                lineHeight="initial"
                                tag="span"
                              >
                                <DynamicTextComponent
                                  fontFamily="IBM Plex Sans, Helvetica Neue, Arial, sans-serif"
                                  fontSize=".778rem"
                                  fontWeight={600}
                                  letterSpacing={0.32}
                                  lineHeight="initial"
                                  tag="span"
                                >
                                  <styled.p
                                    as="span"
                                    fontFamily="IBM Plex Sans, Helvetica Neue, Arial, sans-serif"
                                    fontSize=".778rem"
                                    fontWeight={600}
                                    letterSpacing={0.32}
                                    lineHeight="initial"
                                  >
                                    <span
                                      className="sc-gKsewC iyCFcw"
                                      fontFamily="IBM Plex Sans, Helvetica Neue, Arial, sans-serif"
                                      fontSize=".778rem"
                                      fontWeight={600}
                                      letterSpacing={0.32}
                                    >
                                      <Link
                                        to="/subjects/structure"
                                      >
                                        <Styled(Link)
                                          to="/subjects/structure"
                                        >
                                          <Link
                                            className="sc-pFZIQ heOrwP"
                                            to="/subjects/structure"
                                          >
                                            <LinkAnchor
                                              className="sc-pFZIQ heOrwP"
                                              href="/subjects/structure"
                                              navigate={[Function]}
                                            >
                                              <a
                                                className="sc-pFZIQ heOrwP"
                                                href="/subjects/structure"
                                                onClick={[Function]}
                                              >
                                                home.pages.anon.links.discover
                                              </a>
                                            </LinkAnchor>
                                          </Link>
                                        </Styled(Link)>
                                      </Link>
                                    </span>
                                  </styled.p>
                                </DynamicTextComponent>
                              </Brevier>
                            </button>
                          </styled.button>
                        </DynamicButtonComponent>
                      </PrimaryButton>
                    </div>
                  </styled.div>
                  <Styled(ReactSVG)
                    display="inline-block"
                    src="/assets/svg/illustrations/homepage_anon.svg"
                  >
                    <ReactSVG
                      afterInjection={[Function]}
                      beforeInjection={[Function]}
                      className="sc-eCssSg iQcoWC"
                      display="inline-block"
                      evalScripts="never"
                      fallback={null}
                      loading={null}
                      renumerateIRIElements={true}
                      src="/assets/svg/illustrations/homepage_anon.svg"
                      useRequestCache={true}
                      wrapper="div"
                    >
                      <div
                        className="sc-eCssSg iQcoWC"
                        display="inline-block"
                      />
                    </ReactSVG>
                  </Styled(ReactSVG)>
                </div>
              </styled.div>
            </HomepageAnon>
          </div>
        </styled.div>
      </Homepage>
    </Router>
  </StaticRouter>
</Provider>
`;

exports[`Homepage should match previous snapshot for authenticated user homepage 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <StaticRouter>
    <Router
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "createHref": [Function],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "listen": [Function],
          "location": Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
          "push": [Function],
          "replace": [Function],
        }
      }
      staticContext={Object {}}
    >
      <Homepage>
        <styled.div>
          <div
            className="sc-bdfBwQ dKXXvR"
          >
            <HomepageAuth
              t={[Function]}
              user={
                Object {
                  "firstname": "dummy firstname",
                  "id": "abcd",
                  "lastname": "dummy lastname",
                }
              }
            >
              <styled.div
                display="grid"
                gridGap="32px"
                gridTemplateColumns="1fr 20%"
                height="100%"
                paddingBottom="64px"
                paddingTop="40px"
              >
                <div
                  className="sc-bdfBwQ geoHkz"
                  display="grid"
                  height="100%"
                >
                  <styled.div
                    display="grid"
                    flexDirection="column"
                    gridGap="5em"
                    gridTemplateRows="auto 1fr"
                  >
                    <div
                      className="sc-bdfBwQ cqnUNL"
                      display="grid"
                    >
                      <styled.div>
                        <div
                          className="sc-bdfBwQ dKXXvR"
                        >
                          <Canon
                            lineHeight="initial"
                            tag="h1"
                          >
                            <DynamicTextComponent
                              fontFamily="IBM Plex Sans, Helvetica Neue, Arial, sans-serif"
                              fontSize="3rem"
                              fontWeight={300}
                              letterSpacing={0}
                              lineHeight="initial"
                              tag="h1"
                            >
                              <styled.p
                                as="h1"
                                fontFamily="IBM Plex Sans, Helvetica Neue, Arial, sans-serif"
                                fontSize="3rem"
                                fontWeight={300}
                                letterSpacing={0}
                                lineHeight="initial"
                              >
                                <h1
                                  className="sc-gKsewC fCGWbv"
                                  fontFamily="IBM Plex Sans, Helvetica Neue, Arial, sans-serif"
                                  fontSize="3rem"
                                  fontWeight={300}
                                  letterSpacing={0}
                                >
                                  home.pages.auth.hero
                                </h1>
                              </styled.p>
                            </DynamicTextComponent>
                          </Canon>
                          <BodyCopy
                            lineHeight="initial"
                          >
                            <DynamicTextComponent
                              fontFamily="IBM Plex Sans, Helvetica Neue, Arial, sans-serif"
                              fontSize="1rem"
                              fontWeight={400}
                              letterSpacing={0}
                              lineHeight="initial"
                              tag="p"
                            >
                              <styled.p
                                as="p"
                                fontFamily="IBM Plex Sans, Helvetica Neue, Arial, sans-serif"
                                fontSize="1rem"
                                fontWeight={400}
                                letterSpacing={0}
                                lineHeight="initial"
                              >
                                <p
                                  className="sc-gKsewC blXFYu"
                                  fontFamily="IBM Plex Sans, Helvetica Neue, Arial, sans-serif"
                                  fontSize="1rem"
                                  fontWeight={400}
                                  letterSpacing={0}
                                >
                                  home.pages.auth.subtitle
                                </p>
                              </styled.p>
                            </DynamicTextComponent>
                          </BodyCopy>
                          <PrimaryButton>
                            <DynamicButtonComponent
                              bg={
                                Object {
                                  "darker1": "#1D1611",
                                  "darker2": "#16110D",
                                  "default": "#241C15",
                                  "lighter1": "#504944",
                                  "lighter2": "#7C7773",
                                }
                              }
                              border={0}
                              borderRadius={4}
                              color={
                                Object {
                                  "darker1": "#FFFFFF",
                                  "darker2": "#FFFFFF",
                                  "default": "#FFFFFF",
                                  "lighter1": "#FFFFFF",
                                  "lighter2": "#FFFFFF",
                                }
                              }
                              disabled={false}
                              isIconOnly={false}
                              onClick={[Function]}
                              padding="8px 16px"
                              textDecoration="none"
                            >
                              <styled.button
                                bg={
                                  Object {
                                    "darker1": "#1D1611",
                                    "darker2": "#16110D",
                                    "default": "#241C15",
                                    "lighter1": "#504944",
                                    "lighter2": "#7C7773",
                                  }
                                }
                                border={0}
                                borderRadius={4}
                                color={
                                  Object {
                                    "darker1": "#FFFFFF",
                                    "darker2": "#FFFFFF",
                                    "default": "#FFFFFF",
                                    "lighter1": "#FFFFFF",
                                    "lighter2": "#FFFFFF",
                                  }
                                }
                                onClick={[Function]}
                                padding="8px 16px"
                                textDecoration="none"
                              >
                                <button
                                  className="sc-iBPRYJ lmqocc"
                                  color={
                                    Object {
                                      "darker1": "#FFFFFF",
                                      "darker2": "#FFFFFF",
                                      "default": "#FFFFFF",
                                      "lighter1": "#FFFFFF",
                                      "lighter2": "#FFFFFF",
                                    }
                                  }
                                  onClick={[Function]}
                                  textDecoration="none"
                                >
                                  <Brevier
                                    fontWeight={600}
                                    lineHeight="initial"
                                    tag="span"
                                  >
                                    <DynamicTextComponent
                                      fontFamily="IBM Plex Sans, Helvetica Neue, Arial, sans-serif"
                                      fontSize=".778rem"
                                      fontWeight={600}
                                      letterSpacing={0.32}
                                      lineHeight="initial"
                                      tag="span"
                                    >
                                      <styled.p
                                        as="span"
                                        fontFamily="IBM Plex Sans, Helvetica Neue, Arial, sans-serif"
                                        fontSize=".778rem"
                                        fontWeight={600}
                                        letterSpacing={0.32}
                                        lineHeight="initial"
                                      >
                                        <span
                                          className="sc-gKsewC iyCFcw"
                                          fontFamily="IBM Plex Sans, Helvetica Neue, Arial, sans-serif"
                                          fontSize=".778rem"
                                          fontWeight={600}
                                          letterSpacing={0.32}
                                        >
                                          <Link
                                            to="/subjects"
                                          >
                                            <Styled(Link)
                                              to="/subjects"
                                            >
                                              <Link
                                                className="sc-pFZIQ heOrwP"
                                                to="/subjects"
                                              >
                                                <LinkAnchor
                                                  className="sc-pFZIQ heOrwP"
                                                  href="/subjects"
                                                  navigate={[Function]}
                                                >
                                                  <a
                                                    className="sc-pFZIQ heOrwP"
                                                    href="/subjects"
                                                    onClick={[Function]}
                                                  >
                                                    home.pages.auth.links.subjects
                                                  </a>
                                                </LinkAnchor>
                                              </Link>
                                            </Styled(Link)>
                                          </Link>
                                        </span>
                                      </styled.p>
                                    </DynamicTextComponent>
                                  </Brevier>
                                </button>
                              </styled.button>
                            </DynamicButtonComponent>
                          </PrimaryButton>
                          <SubtleButton
                            marginLeft="5px"
                          >
                            <DynamicButtonComponent
                              bg={
                                Object {
                                  "darker1": "#FFFFFF",
                                  "darker2": "#FFFFFF",
                                  "default": "#FFFFFF",
                                  "lighter1": "#FFFFFF",
                                  "lighter2": "#FFFFFF",
                                }
                              }
                              border={0}
                              borderRadius={4}
                              color={
                                Object {
                                  "darker1": "#707070",
                                  "darker2": "#545454",
                                  "default": "#8C8C8C",
                                  "lighter1": "#A3A3A3",
                                  "lighter2": "#BABABA",
                                }
                              }
                              disabled={false}
                              iconSize="1.125em"
                              isIconOnly={false}
                              marginLeft="5px"
                              onClick={[Function]}
                              padding="8px 16px"
                              textDecoration="none"
                            >
                              <styled.button
                                bg={
                                  Object {
                                    "darker1": "#FFFFFF",
                                    "darker2": "#FFFFFF",
                                    "default": "#FFFFFF",
                                    "lighter1": "#FFFFFF",
                                    "lighter2": "#FFFFFF",
                                  }
                                }
                                border={0}
                                borderRadius={4}
                                color={
                                  Object {
                                    "darker1": "#707070",
                                    "darker2": "#545454",
                                    "default": "#8C8C8C",
                                    "lighter1": "#A3A3A3",
                                    "lighter2": "#BABABA",
                                  }
                                }
                                iconSize="1.125em"
                                marginLeft="5px"
                                onClick={[Function]}
                                padding="8px 16px"
                                textDecoration="none"
                              >
                                <button
                                  className="sc-iBPRYJ ihRVSG"
                                  color={
                                    Object {
                                      "darker1": "#707070",
                                      "darker2": "#545454",
                                      "default": "#8C8C8C",
                                      "lighter1": "#A3A3A3",
                                      "lighter2": "#BABABA",
                                    }
                                  }
                                  onClick={[Function]}
                                  textDecoration="none"
                                >
                                  <Brevier
                                    fontWeight={600}
                                    lineHeight="initial"
                                    tag="span"
                                  >
                                    <DynamicTextComponent
                                      fontFamily="IBM Plex Sans, Helvetica Neue, Arial, sans-serif"
                                      fontSize=".778rem"
                                      fontWeight={600}
                                      letterSpacing={0.32}
                                      lineHeight="initial"
                                      tag="span"
                                    >
                                      <styled.p
                                        as="span"
                                        fontFamily="IBM Plex Sans, Helvetica Neue, Arial, sans-serif"
                                        fontSize=".778rem"
                                        fontWeight={600}
                                        letterSpacing={0.32}
                                        lineHeight="initial"
                                      >
                                        <span
                                          className="sc-gKsewC iyCFcw"
                                          fontFamily="IBM Plex Sans, Helvetica Neue, Arial, sans-serif"
                                          fontSize=".778rem"
                                          fontWeight={600}
                                          letterSpacing={0.32}
                                        >
                                          <Link
                                            to="/subjects/structure"
                                          >
                                            <Styled(Link)
                                              to="/subjects/structure"
                                            >
                                              <Link
                                                className="sc-pFZIQ heOrwP"
                                                to="/subjects/structure"
                                              >
                                                <LinkAnchor
                                                  className="sc-pFZIQ heOrwP"
                                                  href="/subjects/structure"
                                                  navigate={[Function]}
                                                >
                                                  <a
                                                    className="sc-pFZIQ heOrwP"
                                                    href="/subjects/structure"
                                                    onClick={[Function]}
                                                  >
                                                    home.pages.auth.links.structure
                                                  </a>
                                                </LinkAnchor>
                                              </Link>
                                            </Styled(Link)>
                                          </Link>
                                        </span>
                                      </styled.p>
                                    </DynamicTextComponent>
                                  </Brevier>
                                </button>
                              </styled.button>
                            </DynamicButtonComponent>
                          </SubtleButton>
                        </div>
                      </styled.div>
                      <LatestCourses>
                        <styled.div
                          display="grid"
                          gridGap="1em"
                          gridTemplateRows="auto 1fr"
                          overflow="hidden"
                        >
                          <div
                            className="sc-bdfBwQ eGPnaA"
                            display="grid"
                            overflow="hidden"
                          >
                            <Paragon
                              lineHeight="initial"
                              margin={0}
                              tag="h1"
                              textTransform="capitalize"
                            >
                              <DynamicTextComponent
                                fontFamily="IBM Plex Sans, Helvetica Neue, Arial, sans-serif"
                                fontSize="1.778rem"
                                fontWeight={400}
                                letterSpacing={0}
                                lineHeight="initial"
                                margin={0}
                                tag="h1"
                                textTransform="capitalize"
                              >
                                <styled.p
                                  as="h1"
                                  fontFamily="IBM Plex Sans, Helvetica Neue, Arial, sans-serif"
                                  fontSize="1.778rem"
                                  fontWeight={400}
                                  letterSpacing={0}
                                  lineHeight="initial"
                                  margin={0}
                                  textTransform="capitalize"
                                >
                                  <h1
                                    className="sc-gKsewC hvWqSp"
                                    fontFamily="IBM Plex Sans, Helvetica Neue, Arial, sans-serif"
                                    fontSize="1.778rem"
                                    fontWeight={400}
                                    letterSpacing={0}
                                  >
                                    home.pages.auth.latest
                                  </h1>
                                </styled.p>
                              </DynamicTextComponent>
                            </Paragon>
                            <styled.div>
                              <div
                                className="sc-bdfBwQ dKXXvR"
                              >
                                <GreatPrimer>
                                  <DynamicTextComponent
                                    fontFamily="IBM Plex Sans, Helvetica Neue, Arial, sans-serif"
                                    fontSize="1.222rem"
                                    fontWeight={400}
                                    letterSpacing={0}
                                    lineHeight="1.635em"
                                    tag="p"
                                  >
                                    <styled.p
                                      as="p"
                                      fontFamily="IBM Plex Sans, Helvetica Neue, Arial, sans-serif"
                                      fontSize="1.222rem"
                                      fontWeight={400}
                                      letterSpacing={0}
                                      lineHeight="1.635em"
                                    >
                                      <p
                                        className="sc-gKsewC ekwjMb"
                                        fontFamily="IBM Plex Sans, Helvetica Neue, Arial, sans-serif"
                                        fontSize="1.222rem"
                                        fontWeight={400}
                                        letterSpacing={0}
                                      >
                                        home.pages.auth.no_active
                                      </p>
                                    </styled.p>
                                  </DynamicTextComponent>
                                </GreatPrimer>
                                <Styled(ReactSVG)
                                  src="/assets/svg/illustrations/homepage_auth_no_active.svg"
                                >
                                  <ReactSVG
                                    afterInjection={[Function]}
                                    beforeInjection={[Function]}
                                    className="sc-eCssSg jJHCkI"
                                    evalScripts="never"
                                    fallback={null}
                                    loading={null}
                                    renumerateIRIElements={true}
                                    src="/assets/svg/illustrations/homepage_auth_no_active.svg"
                                    useRequestCache={true}
                                    wrapper="div"
                                  >
                                    <div
                                      className="sc-eCssSg jJHCkI"
                                    />
                                  </ReactSVG>
                                </Styled(ReactSVG)>
                                <OutlinedLinkButton
                                  marginTop="7px"
                                >
                                  <DynamicLinkButtonComponent
                                    bg={
                                      Object {
                                        "darker1": "#FFFFFF",
                                        "darker2": "#FFFFFF",
                                        "default": "#FFFFFF",
                                        "lighter1": "#FFFFFF",
                                        "lighter2": "#FFFFFF",
                                      }
                                    }
                                    border="solid 1px #403B3B"
                                    borderRadius={4}
                                    color={
                                      Object {
                                        "darker1": "#332F2F",
                                        "darker2": "#262323",
                                        "default": "#403B3B",
                                        "lighter1": "#666262",
                                        "lighter2": "#8C8989",
                                      }
                                    }
                                    disabled={false}
                                    hoverBg="#F5F5F2"
                                    linkStyle={
                                      Object {
                                        "display": "inline-block",
                                        "fontFamily": "IBM Plex Sans, Helvetica Neue, Arial, sans-serif",
                                        "fontSize": ".778rem",
                                        "fontWeight": 600,
                                        "letterSpacing": 0.32,
                                        "lineHeight": "1.125em",
                                      }
                                    }
                                    marginTop="7px"
                                    padding="8px 16px"
                                    textDecoration="none"
                                  >
                                    <styled.button
                                      bg={
                                        Object {
                                          "darker1": "#FFFFFF",
                                          "darker2": "#FFFFFF",
                                          "default": "#FFFFFF",
                                          "lighter1": "#FFFFFF",
                                          "lighter2": "#FFFFFF",
                                        }
                                      }
                                      border="solid 1px #403B3B"
                                      borderRadius={4}
                                      color={
                                        Object {
                                          "darker1": "#332F2F",
                                          "darker2": "#262323",
                                          "default": "#403B3B",
                                          "lighter1": "#666262",
                                          "lighter2": "#8C8989",
                                        }
                                      }
                                      hoverBg="#F5F5F2"
                                      marginTop="7px"
                                      textDecoration="none"
                                    >
                                      <button
                                        className="sc-fubCfw IXkCk"
                                        color={
                                          Object {
                                            "darker1": "#332F2F",
                                            "darker2": "#262323",
                                            "default": "#403B3B",
                                            "lighter1": "#666262",
                                            "lighter2": "#8C8989",
                                          }
                                        }
                                        textDecoration="none"
                                      >
                                        <Link
                                          disabled={false}
                                          display="inline-block"
                                          fontFamily="IBM Plex Sans, Helvetica Neue, Arial, sans-serif"
                                          fontSize=".778rem"
                                          fontWeight={600}
                                          letterSpacing={0.32}
                                          padding="8px 16px"
                                          to="/subjects"
                                        >
                                          <Styled(Link)
                                            display="inline-block"
                                            fontFamily="IBM Plex Sans, Helvetica Neue, Arial, sans-serif"
                                            fontSize=".778rem"
                                            fontWeight={600}
                                            letterSpacing={0.32}
                                            padding="8px 16px"
                                            to="/subjects"
                                          >
                                            <Link
                                              className="sc-pFZIQ bqCOs"
                                              display="inline-block"
                                              fontFamily="IBM Plex Sans, Helvetica Neue, Arial, sans-serif"
                                              fontSize=".778rem"
                                              fontWeight={600}
                                              letterSpacing={0.32}
                                              padding="8px 16px"
                                              to="/subjects"
                                            >
                                              <LinkAnchor
                                                className="sc-pFZIQ bqCOs"
                                                display="inline-block"
                                                fontFamily="IBM Plex Sans, Helvetica Neue, Arial, sans-serif"
                                                fontSize=".778rem"
                                                fontWeight={600}
                                                href="/subjects"
                                                letterSpacing={0.32}
                                                navigate={[Function]}
                                                padding="8px 16px"
                                              >
                                                <a
                                                  className="sc-pFZIQ bqCOs"
                                                  display="inline-block"
                                                  fontFamily="IBM Plex Sans, Helvetica Neue, Arial, sans-serif"
                                                  fontSize=".778rem"
                                                  fontWeight={600}
                                                  href="/subjects"
                                                  letterSpacing={0.32}
                                                  onClick={[Function]}
                                                  padding="8px 16px"
                                                >
                                                  home.pages.auth.links.subjects
                                                </a>
                                              </LinkAnchor>
                                            </Link>
                                          </Styled(Link)>
                                        </Link>
                                      </button>
                                    </styled.button>
                                  </DynamicLinkButtonComponent>
                                </OutlinedLinkButton>
                              </div>
                            </styled.div>
                          </div>
                        </styled.div>
                      </LatestCourses>
                    </div>
                  </styled.div>
                  <Sidebar>
                    <aside>
                      <styled.div
                        borderLeft="solid 1px #DBD9D2"
                        display="grid"
                        gridTemplateRows="auto auto auto 1fr"
                        height="90vh"
                        padding="24px 64px"
                        paddingRight={0}
                        position="sticky"
                        top="24px"
                      >
                        <div
                          className="sc-bdfBwQ grfTVO"
                          display="grid"
                          height="90vh"
                        >
                          <Paragon
                            lineHeight="initial"
                            margin={0}
                            tag="h1"
                            textTransform="capitalize"
                          >
                            <DynamicTextComponent
                              fontFamily="IBM Plex Sans, Helvetica Neue, Arial, sans-serif"
                              fontSize="1.778rem"
                              fontWeight={400}
                              letterSpacing={0}
                              lineHeight="initial"
                              margin={0}
                              tag="h1"
                              textTransform="capitalize"
                            >
                              <styled.p
                                as="h1"
                                fontFamily="IBM Plex Sans, Helvetica Neue, Arial, sans-serif"
                                fontSize="1.778rem"
                                fontWeight={400}
                                letterSpacing={0}
                                lineHeight="initial"
                                margin={0}
                                textTransform="capitalize"
                              >
                                <h1
                                  className="sc-gKsewC hvWqSp"
                                  fontFamily="IBM Plex Sans, Helvetica Neue, Arial, sans-serif"
                                  fontSize="1.778rem"
                                  fontWeight={400}
                                  letterSpacing={0}
                                >
                                  home.pages.auth.timeline
                                </h1>
                              </styled.p>
                            </DynamicTextComponent>
                          </Paragon>
                          <styled.ul
                            display="flex"
                            flexDirection="column"
                            gridGap="2em 2.5em"
                            listStyle="none"
                            marginTop="1em"
                            padding={0}
                          >
                            <ul
                              className="sc-dlfnbm byImbB"
                              display="flex"
                            />
                          </styled.ul>
                        </div>
                      </styled.div>
                    </aside>
                  </Sidebar>
                </div>
              </styled.div>
            </HomepageAuth>
          </div>
        </styled.div>
      </Homepage>
    </Router>
  </StaticRouter>
</Provider>
`;
